# linera-flappy

./: .gitignore  Cargo.toml  README.md  README_.md  dev-setup.sh  dev-status.sh  dev_0-cleanup.sh  dev_1-start-network.sh  dev_2-setup-wallet.sh  dev_3-deploy.sh  test-graphql-simple.sh
src/: contract.rs  lib.rs  service.rs  state.rs
tests/: single_chain.rs
web-frontend/: .env  index.html  package.json
web-frontend/src/: bird.js  game.js  game.js.backup  main.js  pipe.js  styles.css  test.js
web-frontend/src/auth/: AuthManager.js
web-frontend/src/blockchain/: LineraClient.js
web-frontend/src/constants/: GameConstants.js
web-frontend/src/game/: GameEngine.js  GameState.js
web-frontend/src/ui/: GameUI.js  TournamentModal.js
